--- a/pom.xml
+++ b/pom.xml
@@ -65,5 +65,6 @@
 		<module>study-demo-stream1</module>
 		<module>study-demo-stream2</module>
     <module>study-demo-stream3</module>
+    <module>study-demo-stream</module>
   </modules>
 </project>
